--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,10 +1,9 @@
 version: '3'
 services:
   web:
-    image: nginx:latest
+    build: .
     ports:
-      - "8082:8082"
+      - "8083:8083"
     volumes:
-      - ./data:/usr/share/nginx/html
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./data:/data
 
