--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "express": "^4.17.1",
-    "markdown-it": "^12.0.6"
+    "markdown-it": "^12.0.6",
+    "markdown-it-anchor": "^8.6.7"
   }
 }
-
