--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "scripts": {
     "start": "node server.js"
   },
+  "type": "module",
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "highlight.js": "^11.9.0",
     "markdown-it": "^12.0.6",
     "markdown-it-anchor": "^8.6.7"
   }
