--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "highlight.js": "^11.9.0",
+    "jsdom": "^24.0.0",
     "markdown-it": "^12.0.6",
     "markdown-it-anchor": "^8.6.7"
   }
