--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,9 +3,14 @@
     "name": "Read Me",
     "icons": [
       {
-        "src": "logo.png",
+        "src": "/icons/android-chrome-512x512.png",
         "type": "image/png",
         "sizes": "512x512"
+      },
+      {
+        "src": "/icons/android-chrome-192x192.png",
+        "type": "image/png",
+        "sizes": "192x192"
       }
     ],
     "start_url": ".",
